--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^4.0.0",
+    "hexo-deployer-git": "^2.1.0",
     "hexo-deployer-rsync": "^1.0.0",
     "hexo-deployer-sftp": "^0.1.0",
     "hexo-generator-archive": "^1.0.0",
